added middle name

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                         style="border-radius: 50%;">
                 </td>
                 <td>
-                    <h1>Pooja prabhudesai</h1>
+                    <h1>Pooja visaji prabhudesai</h1>
                     <p>
                         <em>
                             FEIT Student at <strong><a href="https://pccegoa.edu.in/">PCCE</a></strong> 
